--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>HEADER SEARCH</h2>
+            <div class="header1">
+                <img src="img/magnify.svg" alt="">
+                <div class="search"></div>
+            </div>
+            <div class="header2">
+                <img src="img/bell-outline.svg" alt="">
+                <img src="img/cropped-Avatar-Round Small.png" width="70rem"  height="70rem" alt="">
+                <h3>Alex Shabalin</h3>
+            </div>
+
+            
+
         </div>
         <div class="name-buttons">
             <h2>BUTTONS</h2>
