Added Header 1 and 2.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <div class="search"></div>
             </div>
             <div class="header2">
-                <img src="img/bell-outline.svg" alt="">
-                <img src="img/cropped-Avatar-Round Small.png" width="70rem"  height="70rem" alt="">
+                <img src="img/bell-outline.svg" id="bell" alt="">
+                <img src="img/cropped-Avatar-Round Small.png" width="50rem"  height="50rem" alt="">
                 <h3>Alex Shabalin</h3>
             </div>
 
@@ -24,10 +24,20 @@
 
         </div>
         <div class="name-buttons">
-            <h2>BUTTONS</h2>
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
+            <div class="flex-buttons">
+                <div class="avatar">
+                    <img src="img/cropped-Avatar-Round Small.png" width="100rem" height="100rem"  alt="">
+                </div>
+                <div class="texts">
+                    <p>Hello to you,</p>
+                    <h2>Alex Shabalin (@shabalin)</h2>
+                </div>
+                <div class="buttons3">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
         <div class="sidebar">
             <div class="dash">
