--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
                 <h3>Alex Shabalin</h3>
             </div>
 
-            
-
         </div>
         <div class="name-buttons">
             <div class="flex-buttons">
@@ -40,69 +38,151 @@
             </div>
         </div>
         <div class="sidebar">
-            <div class="dash">
-                <img src="img/view-dashboard.svg" alt="">
-                <h2>Dashboard</h2>
-            </div>
-            <div class="side-block-1">
-                <div>
-                    <img src="img/home-account.svg" alt="">
-                    <h3>Home</h3>
+            <div class="sideflex">
+                <div class="dash">
+                    <img src="img/view-dashboard.svg" alt="">
+                    <h2>Dashboard</h2>
                 </div>
-                <div>
-                    <img src="img/account.svg" alt="">
-                    <h3>Profile</h3>
-                </div>
-                <div>
-                    <img src="img/message.svg" alt="">
-                    <h3>Messages</h3>
-                </div>
-                <div>
-                    <img src="img/clipboard-text-clock.svg" alt="">
-                    <h3>History</h3>
-                </div>
-                <div>
-                    <img src="img/calendar-check.svg" alt="">
-                    <h3>Tasks</h3>
-                </div>
-            </div>
-
-            <div class="side-block-2">
-                <div>
-                    <img src="img/cog.svg" alt="">
-                    <h3>Settings</h3>
-                </div>
-                <div>
-                    <img src="img/help-box.svg" alt="">
-                    <h3>Support</h3>
-                </div>
-                <div>
-                    <img src="img/shield-sun.svg" alt="">
-                    <h3>Privacy</h3>
+                <div class="side-block-1">
+                    <div>
+                        <img src="img/home-account.svg" alt="">
+                        <h3>Home</h3>
+                    </div>
+                    <div>
+                        <img src="img/account.svg" alt="">
+                        <h3>Profile</h3>
+                    </div>
+                    <div>
+                        <img src="img/message.svg" alt="">
+                        <h3>Messages</h3>
+                    </div>
+                    <div>
+                        <img src="img/clipboard-text-clock.svg" alt="">
+                        <h3>History</h3>
+                    </div>
+                    <div>
+                        <img src="img/calendar-check.svg" alt="">
+                        <h3>Tasks</h3>
+                    </div>
                 </div>
 
+                <div class="side-block-2">
+                    <div>
+                        <img src="img/cog.svg" alt="">
+                        <h3>Settings</h3>
+                    </div>
+                    <div>
+                        <img src="img/help-box.svg" alt="">
+                        <h3>Support</h3>
+                    </div>
+                    <div>
+                        <img src="img/shield-sun.svg" alt="">
+                        <h3>Privacy</h3>
+                    </div>
+
+                </div>
             </div>
 
 
         </div>
         <div class="main">
-            <div class="block1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore sed, explicabo repellat corrupti sapiente iste molestias iure, aliquam quaerat quos adipisci voluptas consequatur deleniti aspernatur possimus enim commodi cumque?</div>
-            <div class="block2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore sed, explicabo repellat corrupti sapiente iste molestias iure, aliquam quaerat quos adipisci voluptas consequatur deleniti aspernatur possimus enim commodi cumque?</div>
-            <div class="block3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore sed, explicabo repellat corrupti sapiente iste molestias iure, aliquam quaerat quos adipisci voluptas consequatur deleniti aspernatur possimus enim commodi cumque?</div>
-            <div class="block4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore sed, explicabo repellat corrupti sapiente iste molestias iure, aliquam quaerat quos adipisci voluptas consequatur deleniti aspernatur possimus enim commodi cumque?</div>
-            <div class="block5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore sed, explicabo repellat corrupti sapiente iste molestias iure, aliquam quaerat quos adipisci voluptas consequatur deleniti aspernatur possimus enim commodi cumque?</div>
-            <div class="block6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore sed, explicabo repellat corrupti sapiente iste molestias iure, aliquam quaerat quos adipisci voluptas consequatur deleniti aspernatur possimus enim commodi cumque?</div>
+            <div class="main-grid"> 
+                <div class="block1">
+                    <h2>Super Cool Project</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nisi, doloremque beatae quisquam ratione quasi.</p>
+                    <button id="button" >Download</button>
+                </div>
+                <div class="block2">
+                    <h2>Less Cool Project</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore sed, explicabo repellat corrupti sapiente iste molestias iure.</p> 
+                    <button id="button" >Download</button>  
+                </div>
+                <div class="block3">
+                    <h2>Good App</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi error ad facere?</p>
+                    <button id="button" >Download</button>
+                </div>
+                <div class="block4">
+                    <h2>Easy Peasy App</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt cupiditate et aliquam?</p>
+                    <button id="button" >Download</button>
+                </div>
+                <div class="block5">
+                    <h2>Ad Blocker</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo natus sequi facilis et pariatur rem non amet!</p>
+                    <button id="button" >Download</button>
+                </div>
+                <div class="block6">
+                    <h2>Money Maker</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus est nesciunt perspiciatis magni! Aperiam, voluptatem.</p>
+                    <button id="button" >Download</button>
+                </div>
+            </div>
         </div>
         <div class="announce">
-            <div class="announce1">asd</div>
-            <div class="announce2">asd</div>
+            <div class="side-div">
+                <div class="announce1">
+                    <div class="a1">
+                        <h2>Site Maintenance</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, dolores.</p>
+                        <hr>  
+                    </div>
+                    <div class="a2">
+                        <h2>Community Share</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, dolores.</p>
+                        <hr>  
+                    </div>
+                    <div class="a3">
+                        <h2>Upadated Privacy</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, dolores.</p>
+                        <hr>  
+                    </div>
 
+
+                </div>
+                <div class="announce2">
+                    <div class="images">
+                        <div class="insta1">
+                            <div class="imag1">
+                                <img src="img/avatars-.png" alt="" width="50rem">
+                            </div>
+                            <div class="texts1">
+                                <h3>@tegan</h3>
+                                <p>World Best Dogs</p>
+                            </div>
+                        </div>
+                        <div class="insta2">
+                            <div class="imag2">
+                                <img src="img/146035.png" alt="" width="50rem">
+                            </div>
+                            <div class="texts2">
+                                <h3>@morgan</h3>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
+                        <div class="insta3">
+                            <div class="imag3">
+                                <img src="img/147140.png" alt="" width="50rem">
+                            </div>
+                            <div class="texts3">
+                                <h3>@kendall</h3>
+                                <p>Life Change App</p>
+                            </div>
+                        </div>
+                        <div class="insta4">
+                            <div class="imag4">
+                                <img src="img/ffa09aec412db3f54deadf1b3781de2a.png" alt="" width="50rem">
+                            </div>
+                            <div class="texts4">
+                                <h3>@alexx</h3>
+                                <p>Traffic Maker</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>   
 
-
-
-
-    </div>
-    
 </body>
 </html>
